# duckduckgo-mcp-server-sse

./: Dockerfile  README.md  pyproject.toml
src/duckduckgo_mcp_server/: server.py
