[project]
name = "duckduckgo-mcp-server-sse"
version = "0.1.1"
description = "MCP Server (SSE) for searching via DuckDuckGo"
readme = "README.md"
license = "MIT"
authors = [{ name = "Nick Clyde", email = "nick@clyde.tech" }, {name = "wildoranges", email = "zkd18cjb@mail.ustc.edu.cn"}]
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.13.3", "httpx>=0.28.1", "mcp[cli]>=1.3.0"]
keywords = ["mcp", "search", "duckduckgo", "web-search", "sse", "http"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/wildoranges/duckduckgo-mcp-server-sse"
Issues = "https://github.com/wildoranges/duckduckgo-mcp-server-sse/issues"

[project.scripts]
duckduckgo-mcp-server-sse = "duckduckgo_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/duckduckgo_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
